--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,12 @@ h4 {
 h5 {
     font-size: 11px;
     color: White;
-    background-color: DimGray;
+    background-color: dimgray;
     text-align: left;
+}
+
+.bgimage {
+         text-align: center;
+         background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png');
+
 }
