--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,11 @@
-* {
+body {
    text-align: center;
    font-family: helvetica;
 }
 
 p {
    font-size: 14px;
-   color: DimGray;}
+   color: Black;}
 
 h1 {
     font-size: 70px;
@@ -16,13 +16,13 @@ h1 {
 h2 {
     font-size: 32px;
     font-weight: bold;
-    color: DimGray;
+    color: Black;
 }
 
 h3 {
     font-size: 23px;
     font-weight: bold;
-    color: DimGray;
+    color: Black;
 }
 
 h4 {
@@ -38,8 +38,28 @@ h5 {
     text-align: left;
 }
 
-.bgimage {
-         text-align: center;
-         background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png');
-
+h6 {
+         font-size: 18px;
+         font-weight: bold;
+         color: White;
 }
+
+.hlinks {
+         font-size: 18px;
+         font-weight: bold;
+         color: White;
+}
+
+.headerimage {
+         background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png');
+         background-size: 100% 100%;
+         background-repeat: no-repeat;
+
+ }
+
+ .bgimage {
+          background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png');
+          background-size: cover;
+          background-repeat: no-repeat;
+
+  }
